tests/ui/consts/invalid-const-in-body.stderr
error: expected at least one digit in exponent
  --> $DIR/invalid-const-in-body.rs:2:5
   |
LL |     2.0E
   |     ^^^^

error: aborting due to 1 previous error

